--- a/scripts/exploratory.ipynb
+++ b/scripts/exploratory.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from variables import PROJECTNAME_DATA_PATHS\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -20,7 +19,383 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LogNorm\n",
     "import networkx as nx\n",
-    "from d3blocks import D3Blocks"
+    "\n",
+    "from d3blocks import D3Blocks\n",
+    "from variables import PROJECTNAME_DATA_PATHS, SDG_MAP, ALL_EVAL_RESULTS_PATH\n",
+    "from file_org import iterdatatype_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluate SDG balance & compare to model performance\n",
+    "\n",
+    "| SDG | Data name       | Data name         |\n",
+    "| --- | --------------- | ----------------- |\n",
+    "|     | Test grad dsc   | Test ugrd outline |\n",
+    "|     | T / F           | T / F             |\n",
+    "| 1   | 5 (%) / 100 (%) | 40 (%) / 300 (%)  |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>project_name</th>\n",
+       "      <th>sdg</th>\n",
+       "      <th>datatype_x</th>\n",
+       "      <th>total_rows</th>\n",
+       "      <th>positive</th>\n",
+       "      <th>negative</th>\n",
+       "      <th>pos_perc</th>\n",
+       "      <th>neg_perc</th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>datatype_y</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>TP</th>\n",
+       "      <th>FP</th>\n",
+       "      <th>TN</th>\n",
+       "      <th>FN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>grad_desc</td>\n",
+       "      <td>SDG 1</td>\n",
+       "      <td>raw</td>\n",
+       "      <td>1148</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1141</td>\n",
+       "      <td>0.006098</td>\n",
+       "      <td>0.993902</td>\n",
+       "      <td>logistic_regression</td>\n",
+       "      <td>test</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>229.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>grad_desc</td>\n",
+       "      <td>SDG 1</td>\n",
+       "      <td>raw</td>\n",
+       "      <td>1148</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1141</td>\n",
+       "      <td>0.006098</td>\n",
+       "      <td>0.993902</td>\n",
+       "      <td>uoft_dict_approach</td>\n",
+       "      <td>test</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>229.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>grad_desc</td>\n",
+       "      <td>SDG 2</td>\n",
+       "      <td>raw</td>\n",
+       "      <td>1148</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1146</td>\n",
+       "      <td>0.001742</td>\n",
+       "      <td>0.998258</td>\n",
+       "      <td>logistic_regression</td>\n",
+       "      <td>test</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>grad_desc</td>\n",
+       "      <td>SDG 2</td>\n",
+       "      <td>raw</td>\n",
+       "      <td>1148</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1146</td>\n",
+       "      <td>0.001742</td>\n",
+       "      <td>0.998258</td>\n",
+       "      <td>uoft_dict_approach</td>\n",
+       "      <td>test</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>227.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>grad_desc</td>\n",
+       "      <td>SDG 3</td>\n",
+       "      <td>raw</td>\n",
+       "      <td>1148</td>\n",
+       "      <td>180</td>\n",
+       "      <td>968</td>\n",
+       "      <td>0.156794</td>\n",
+       "      <td>0.843206</td>\n",
+       "      <td>logistic_regression</td>\n",
+       "      <td>test</td>\n",
+       "      <td>0.842105</td>\n",
+       "      <td>0.533333</td>\n",
+       "      <td>0.653061</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>197.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>235</th>\n",
+       "      <td>undergrad_outlines</td>\n",
+       "      <td>SDG 12</td>\n",
+       "      <td>dev</td>\n",
+       "      <td>96</td>\n",
+       "      <td>3</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0.031250</td>\n",
+       "      <td>0.968750</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236</th>\n",
+       "      <td>undergrad_outlines</td>\n",
+       "      <td>SDG 13</td>\n",
+       "      <td>dev</td>\n",
+       "      <td>96</td>\n",
+       "      <td>1</td>\n",
+       "      <td>95</td>\n",
+       "      <td>0.010417</td>\n",
+       "      <td>0.989583</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>undergrad_outlines</td>\n",
+       "      <td>SDG 14</td>\n",
+       "      <td>dev</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>238</th>\n",
+       "      <td>undergrad_outlines</td>\n",
+       "      <td>SDG 15</td>\n",
+       "      <td>dev</td>\n",
+       "      <td>96</td>\n",
+       "      <td>4</td>\n",
+       "      <td>92</td>\n",
+       "      <td>0.041667</td>\n",
+       "      <td>0.958333</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>undergrad_outlines</td>\n",
+       "      <td>SDG 16</td>\n",
+       "      <td>dev</td>\n",
+       "      <td>96</td>\n",
+       "      <td>21</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.218750</td>\n",
+       "      <td>0.781250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>240 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           project_name     sdg datatype_x  total_rows  positive  negative  \\\n",
+       "0             grad_desc   SDG 1        raw        1148         7      1141   \n",
+       "1             grad_desc   SDG 1        raw        1148         7      1141   \n",
+       "2             grad_desc   SDG 2        raw        1148         2      1146   \n",
+       "3             grad_desc   SDG 2        raw        1148         2      1146   \n",
+       "4             grad_desc   SDG 3        raw        1148       180       968   \n",
+       "..                  ...     ...        ...         ...       ...       ...   \n",
+       "235  undergrad_outlines  SDG 12        dev          96         3        93   \n",
+       "236  undergrad_outlines  SDG 13        dev          96         1        95   \n",
+       "237  undergrad_outlines  SDG 14        dev          96         0        96   \n",
+       "238  undergrad_outlines  SDG 15        dev          96         4        92   \n",
+       "239  undergrad_outlines  SDG 16        dev          96        21        75   \n",
+       "\n",
+       "     pos_perc  neg_perc           model_name datatype_y  precision    recall  \\\n",
+       "0    0.006098  0.993902  logistic_regression       test        NaN  0.000000   \n",
+       "1    0.006098  0.993902   uoft_dict_approach       test   1.000000  1.000000   \n",
+       "2    0.001742  0.998258  logistic_regression       test        NaN       NaN   \n",
+       "3    0.001742  0.998258   uoft_dict_approach       test   0.000000       NaN   \n",
+       "4    0.156794  0.843206  logistic_regression       test   0.842105  0.533333   \n",
+       "..        ...       ...                  ...        ...        ...       ...   \n",
+       "235  0.031250  0.968750                  NaN        NaN        NaN       NaN   \n",
+       "236  0.010417  0.989583                  NaN        NaN        NaN       NaN   \n",
+       "237  0.000000  1.000000                  NaN        NaN        NaN       NaN   \n",
+       "238  0.041667  0.958333                  NaN        NaN        NaN       NaN   \n",
+       "239  0.218750  0.781250                  NaN        NaN        NaN       NaN   \n",
+       "\n",
+       "           f1    TP   FP     TN    FN  \n",
+       "0         NaN   0.0  0.0  229.0   1.0  \n",
+       "1    1.000000   1.0  0.0  229.0   0.0  \n",
+       "2         NaN   0.0  0.0  230.0   0.0  \n",
+       "3         NaN   0.0  3.0  227.0   0.0  \n",
+       "4    0.653061  16.0  3.0  197.0  14.0  \n",
+       "..        ...   ...  ...    ...   ...  \n",
+       "235       NaN   NaN  NaN    NaN   NaN  \n",
+       "236       NaN   NaN  NaN    NaN   NaN  \n",
+       "237       NaN   NaN  NaN    NaN   NaN  \n",
+       "238       NaN   NaN  NaN    NaN   NaN  \n",
+       "239       NaN   NaN  NaN    NaN   NaN  \n",
+       "\n",
+       "[240 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count_sdgs(data):\n",
+    "    sdg_counts = {k: 0 for k in SDG_MAP.keys()}\n",
+    "    total_rows = data.shape[0]\n",
+    "\n",
+    "    for label_data in data[\"labels\"]:\n",
+    "        for label in set(label_data):\n",
+    "            sdg_counts[label] += 1\n",
+    "\n",
+    "    return sdg_counts, total_rows\n",
+    "\n",
+    "\n",
+    "all_results = []\n",
+    "for datatype in PROJECTNAME_DATA_PATHS.keys():\n",
+    "    for project_name, data in iterdatatype_data(datatype):\n",
+    "        sdg_counts, total_rows = count_sdgs(data)\n",
+    "        for sdg, sdg_count in sdg_counts.items():\n",
+    "            all_results.append(\n",
+    "                dict(\n",
+    "                    project_name=project_name,\n",
+    "                    sdg=sdg,\n",
+    "                    datatype=datatype,\n",
+    "                    total_rows=total_rows,\n",
+    "                    positive=sdg_count,\n",
+    "                    negative=total_rows - sdg_count,\n",
+    "                    pos_perc=sdg_count / total_rows,\n",
+    "                    neg_perc=(total_rows - sdg_count) / total_rows,\n",
+    "                )\n",
+    "            )\n",
+    "\n",
+    "data_counts_df = pd.DataFrame(all_results)\n",
+    "\n",
+    "model_performance = pd.read_json(ALL_EVAL_RESULTS_PATH, orient=\"records\", lines=True)\n",
+    "data_counts_df = data_counts_df.merge(\n",
+    "    model_performance, how=\"left\", on=[\"sdg\", \"project_name\"]\n",
+    ")\n",
+    "\n",
+    "data_counts_df.to_excel(\"../data/exploratory/data_distribution.xlsx\", index=False)\n",
+    "data_counts_df"
    ]
   },
   {
@@ -2516,7 +2891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
