--- a/scripts/residuals_and_output_preds.ipynb
+++ b/scripts/residuals_and_output_preds.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,130 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "      <th>prediction</th>\n",
-       "      <th>original_label</th>\n",
-       "      <th>comparison</th>\n",
-       "      <th>STRM</th>\n",
-       "      <th>FACULTY DESC</th>\n",
-       "      <th>DEPARTMENT</th>\n",
-       "      <th>CRSE CAREER</th>\n",
-       "      <th>SSR COMPONENT</th>\n",
-       "      <th>CRSE_ID</th>\n",
-       "      <th>...</th>\n",
-       "      <th>CATALOG NBR</th>\n",
-       "      <th>CLASS SECTION</th>\n",
-       "      <th>CLASS DESCR</th>\n",
-       "      <th>ENROLMENT</th>\n",
-       "      <th>LAST TERM OFFERED</th>\n",
-       "      <th>URL</th>\n",
-       "      <th>cats</th>\n",
-       "      <th>entities</th>\n",
-       "      <th>labels</th>\n",
-       "      <th>has_sdg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Page 1 of 2\\n\\nARTSSCI 1B03 / Writing - 2022-2...</td>\n",
-       "      <td>{'category': 'SDG 1', 'prediction': 0, 'metada...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>TN</td>\n",
-       "      <td>2229</td>\n",
-       "      <td>Arts &amp; Science</td>\n",
-       "      <td>Arts and Science Baccalaureate</td>\n",
-       "      <td>UGRD</td>\n",
-       "      <td>LEC</td>\n",
-       "      <td>100530</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1B03</td>\n",
-       "      <td>C01</td>\n",
-       "      <td>Writing</td>\n",
-       "      <td>84</td>\n",
-       "      <td>FALL 2022</td>\n",
-       "      <td>https://artsci.mcmaster.ca/app/uploads/2022/08...</td>\n",
-       "      <td>[3 - Good Health and Well-Being, 5 - Gender Eq...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[SDG 16, SDG 5, SDG 3]</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                text  \\\n",
-       "0  Page 1 of 2\\n\\nARTSSCI 1B03 / Writing - 2022-2...   \n",
-       "\n",
-       "                                          prediction  original_label  \\\n",
-       "0  {'category': 'SDG 1', 'prediction': 0, 'metada...               0   \n",
-       "\n",
-       "  comparison  STRM    FACULTY DESC                      DEPARTMENT  \\\n",
-       "0         TN  2229  Arts & Science  Arts and Science Baccalaureate   \n",
-       "\n",
-       "  CRSE CAREER SSR COMPONENT  CRSE_ID  ... CATALOG NBR CLASS SECTION  \\\n",
-       "0        UGRD           LEC   100530  ...        1B03           C01   \n",
-       "\n",
-       "  CLASS DESCR ENROLMENT  LAST TERM OFFERED  \\\n",
-       "0     Writing        84          FALL 2022   \n",
-       "\n",
-       "                                                 URL  \\\n",
-       "0  https://artsci.mcmaster.ca/app/uploads/2022/08...   \n",
-       "\n",
-       "                                                cats entities  \\\n",
-       "0  [3 - Good Health and Well-Being, 5 - Gender Eq...       []   \n",
-       "\n",
-       "                   labels has_sdg  \n",
-       "0  [SDG 16, SDG 5, SDG 3]    True  \n",
-       "\n",
-       "[1 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combined.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\edalatma\\AppData\\Local\\Temp\\ipykernel_3776\\2755461233.py:21: SettingWithCopyWarning: \n",
+      "C:\\Users\\arman\\AppData\\Local\\Temp\\ipykernel_376\\2755461233.py:21: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -185,9 +69,6 @@
     "combined = pd.concat(combined)\n",
     "combined.drop([\"text_y\", \"index\"], axis=\"columns\", inplace=True)\n",
     "combined.rename(columns={\"text_x\": \"text\"}, inplace=True)\n",
-    "\n",
-    "combined.head(1)\n",
-    "\n",
     "\n",
     "def save_per_faculty(combined):\n",
     "    combined[\"cats\"] = combined[\"cats\"].apply(lambda l: [SDG_MAP[x] for x in l])\n",
@@ -211,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
